# vocabolario_italiano_di_base

./: LICENSE  README.md  pyproject.toml
output/: vocabolario.json
scripts/: parser.py
